# serializer version: 1
# name: TestAggregationTrajectoryCall.test_call[dtw]
  np.float64(7.6667)
# ---
# name: TestAggregationTrajectoryCall.test_call[edit]
  np.float64(7.6667)
# ---
# name: TestAggregationTrajectoryCall.test_call[lcp]
  np.float64(0.0)
# ---
# name: TestAggregationTrajectoryCall.test_call[lcs]
  np.float64(0.6667)
# ---
# name: TestAggregationTrajectoryCall.test_call[linearpairwise]
  np.float64(1.0)
# ---
# name: TestAggregationTrajectoryCall.test_call[softdtw]
  np.float64(1.5623)
# ---
